--- a/index.html
+++ b/index.html
@@ -4,35 +4,98 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Harlequin's VC Shop</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; background: #1f1f2e; color: #fff; text-align: center; }
-    .shop { max-width: 800px; margin: 40px auto; padding: 20px; }
-    .item { background: #2e2e3e; border-radius: 8px; margin: 20px 0; padding: 20px; }
-    .buy-btn { background: #f1c40f; color: #000; padding: 10px 20px; border: none; border-radius: 6px; font-size: 16px; cursor: pointer; text-decoration: none; display: inline-block; margin-top: 10px; }
-    h1 { color: #f1c40f; }
+    body {
+      margin: 0;
+      font-family: 'Orbitron', sans-serif;
+      background: linear-gradient(135deg, #1f1f2e, #2a2a3d);
+      color: #fff;
+      text-align: center;
+    }
+    header {
+      background-color: #111;
+      padding: 20px;
+      box-shadow: 0 2px 10px #00000066;
+    }
+    header h1 {
+      margin: 0;
+      color: #f1c40f;
+      font-size: 2.5rem;
+    }
+    .shop {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 20px;
+    }
+    .item {
+      background: #2e2e3e;
+      border-radius: 10px;
+      margin: 20px auto;
+      padding: 30px;
+      width: 80%;
+      box-shadow: 0 4px 15px #00000066;
+    }
+    .item img {
+      max-width: 100px;
+      border-radius: 10px;
+      margin-bottom: 15px;
+    }
+    .item h2 {
+      margin: 10px 0;
+      color: #f1c40f;
+    }
+    .item p {
+      font-size: 1.1rem;
+      color: #ddd;
+    }
+    .buy-btn {
+      background: #f1c40f;
+      color: #000;
+      padding: 12px 25px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+      margin-top: 15px;
+    }
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      color: #aaa;
+      background-color: #111;
+    }
   </style>
 </head>
 <body>
+  <header>
+    <h1>🌟 Harlequin's VC Shop 🌟</h1>
+  </header>
   <div class="shop">
-    <h1>Harlequin's VC Shop</h1>
-
     <div class="item">
+      <img src="https://cdn-icons-png.flaticon.com/512/657/657882.png" alt="Premium Role">
       <h2>Premium Role</h2>
-      <p>$3/month – Access to exclusive VC channels and perks</p>
+      <p>$3/month — Access to exclusive VC channels and perks</p>
       <a class="buy-btn" href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WL69759605857328M76SHTY" target="_blank">Subscribe</a>
     </div>
-
     <div class="item">
+      <img src="https://cdn-icons-png.flaticon.com/512/3820/3820331.png" alt="XP Booster">
       <h2>XP Booster</h2>
-      <p>$2 – Doubles your XP gain for 7 days</p>
+      <p>$2 — Doubles your XP gain for 7 days</p>
       <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=XP Booster Payment&body=Please write your Discord tag here to receive your XP boost." target="_blank">Buy</a>
     </div>
-
     <div class="item">
+      <img src="https://cdn-icons-png.flaticon.com/512/3502/3502458.png" alt="Cool VC Badge">
       <h2>Cool VC Badge</h2>
-      <p>$1 – Shows off your support</p>
+      <p>$1 — Shows off your support</p>
       <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=VC Badge Payment&body=Please write your Discord tag here to receive your badge." target="_blank">Buy</a>
     </div>
   </div>
+  <footer>
+    <p>&copy; 2025 Harlequin's VC Shop. All rights reserved.</p>
+  </footer>
 </body>
 </html>
