--- a/index.html
+++ b/index.html
@@ -27,14 +27,20 @@
       max-width: 1000px;
       margin: 40px auto;
       padding: 20px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
     }
     .item {
       background: #2e2e3e;
       border-radius: 10px;
-      margin: 20px auto;
       padding: 30px;
-      width: 80%;
+      width: 300px;
       box-shadow: 0 4px 15px #00000066;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     .item img {
       max-width: 100px;
@@ -78,24 +84,37 @@
     <div class="item">
       <img src="https://cdn-icons-png.flaticon.com/512/657/657882.png" alt="Premium Role">
       <h2>Premium Role</h2>
-      <p>$3/month — Access to exclusive VC channels and perks</p>
+      <p>$3/month — Access exclusive VC channels</p>
       <a class="buy-btn" href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WL69759605857328M76SHTY" target="_blank">Subscribe</a>
     </div>
     <div class="item">
       <img src="https://cdn-icons-png.flaticon.com/512/3820/3820331.png" alt="XP Booster">
       <h2>XP Booster</h2>
-      <p>$2 — Doubles your XP gain for 7 days</p>
-      <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=XP Booster Payment&body=Please write your Discord tag here to receive your XP boost." target="_blank">Buy</a>
+      <p>$2 — Double XP for 7 days</p>
+      <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=XP Booster Payment&body=Your Discord tag here" target="_blank">Buy</a>
     </div>
     <div class="item">
       <img src="https://cdn-icons-png.flaticon.com/512/3502/3502458.png" alt="Cool VC Badge">
       <h2>Cool VC Badge</h2>
-      <p>$1 — Shows off your support</p>
-      <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=VC Badge Payment&body=Please write your Discord tag here to receive your badge." target="_blank">Buy</a>
+      <p>$1 — Supporter flair on Discord</p>
+      <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=VC Badge Payment&body=Your Discord tag here" target="_blank">Buy</a>
+    </div>
+    <div class="item">
+      <img src="https://cdn-icons-png.flaticon.com/512/1041/1041916.png" alt="VIP Access">
+      <h2>VIP Lounge Access</h2>
+      <p>$5/month — Private VC, early features</p>
+      <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=VIP Access&body=Your Discord tag here" target="_blank">Subscribe</a>
+    </div>
+    <div class="item">
+      <img src="https://cdn-icons-png.flaticon.com/512/4727/4727426.png" alt="Server Supporter Bundle">
+      <h2>Supporter Bundle</h2>
+      <p>$10 — Badge + Booster + Name Highlight</p>
+      <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=Supporter Bundle&body=Your Discord tag here" target="_blank">Buy</a>
     </div>
   </div>
   <footer>
     <p>&copy; 2025 Harlequin's VC Shop. All rights reserved.</p>
+    <p><em>Note: After payment, your Discord role is added automatically if linked. Otherwise, contact mods with your transaction ID.</em></p>
   </footer>
 </body>
 </html>
