--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     body {
       margin: 0;
       font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(135deg, #1f1f2e, #2a2a3d);
+      background: url('/mnt/data/506b0246-6b15-46fe-9e45-509f1c249502.png') center center/cover no-repeat fixed;
       color: #fff;
       text-align: center;
     }
     header {
-      background-color: #111;
+      background-color: rgba(0, 0, 0, 0.6);
       padding: 20px;
       box-shadow: 0 2px 10px #00000066;
     }
@@ -31,9 +31,11 @@
       flex-wrap: wrap;
       gap: 20px;
       justify-content: center;
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 10px;
     }
     .item {
-      background: #2e2e3e;
+      background: rgba(46, 46, 62, 0.8);
       border-radius: 10px;
       padding: 30px;
       width: 300px;
@@ -72,12 +74,13 @@
       margin-top: 40px;
       padding: 20px;
       color: #aaa;
-      background-color: #111;
+      background-color: rgba(0, 0, 0, 0.6);
     }
   </style>
 </head>
 <body>
   <header>
+    <img src="/mnt/data/506b0246-6b15-46fe-9e45-509f1c249502.png" alt="Server Logo" style="max-height: 80px; border-radius: 50%; margin-bottom: 10px;">
     <h1>🌟 Harlequin's VC Shop 🌟</h1>
   </header>
   <div class="shop">
@@ -99,22 +102,9 @@
       <p>$1 — Supporter flair on Discord</p>
       <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=VC Badge Payment&body=Your Discord tag here" target="_blank">Buy</a>
     </div>
-    <div class="item">
-      <img src="https://cdn-icons-png.flaticon.com/512/1041/1041916.png" alt="VIP Access">
-      <h2>VIP Lounge Access</h2>
-      <p>$5/month — Private VC, early features</p>
-      <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=VIP Access&body=Your Discord tag here" target="_blank">Subscribe</a>
-    </div>
-    <div class="item">
-      <img src="https://cdn-icons-png.flaticon.com/512/4727/4727426.png" alt="Server Supporter Bundle">
-      <h2>Supporter Bundle</h2>
-      <p>$10 — Badge + Booster + Name Highlight</p>
-      <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=Supporter Bundle&body=Your Discord tag here" target="_blank">Buy</a>
-    </div>
   </div>
   <footer>
-    <p>&copy; 2025 Harlequin's VC Shop. All rights reserved.</p>
-    <p><em>Note: After payment, your Discord role is added automatically if linked. Otherwise, contact mods with your transaction ID.</em></p>
+    &copy; 2025 Harlequin's VC Shop. Designed with passion in the cosmos.
   </footer>
 </body>
 </html>
