--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
       color: #fff;
       text-align: center;
     }
+    .overlay {
+      background-color: rgba(0, 0, 0, 0.8);
+      min-height: 100vh;
+      padding-bottom: 40px;
+    }
     header {
-      background-color: rgba(0, 0, 0, 0.6);
       padding: 20px;
-      box-shadow: 0 2px 10px #00000066;
+    }
+    header img {
+      max-height: 90px;
+      border-radius: 50%;
+      margin-bottom: 10px;
     }
     header h1 {
       margin: 0;
@@ -31,8 +39,6 @@
       flex-wrap: wrap;
       gap: 20px;
       justify-content: center;
-      background-color: rgba(0, 0, 0, 0.6);
-      border-radius: 10px;
     }
     .item {
       background: rgba(46, 46, 62, 0.8);
@@ -71,40 +77,46 @@
       margin-top: 15px;
     }
     footer {
-      margin-top: 40px;
       padding: 20px;
       color: #aaa;
-      background-color: rgba(0, 0, 0, 0.6);
+      font-size: 0.9rem;
+    }
+    @media (max-width: 768px) {
+      .item {
+        width: 90%;
+      }
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="/mnt/data/506b0246-6b15-46fe-9e45-509f1c249502.png" alt="Server Logo" style="max-height: 80px; border-radius: 50%; margin-bottom: 10px;">
-    <h1>🌟 Harlequin's VC Shop 🌟</h1>
-  </header>
-  <div class="shop">
-    <div class="item">
-      <img src="https://cdn-icons-png.flaticon.com/512/657/657882.png" alt="Premium Role">
-      <h2>Premium Role</h2>
-      <p>$3/month — Access exclusive VC channels</p>
-      <a class="buy-btn" href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WL69759605857328M76SHTY" target="_blank">Subscribe</a>
+  <div class="overlay">
+    <header>
+      <img src="/mnt/data/506b0246-6b15-46fe-9e45-509f1c249502.png" alt="Server Logo">
+      <h1>🌟 Harlequin's VC Shop 🌟</h1>
+    </header>
+    <div class="shop">
+      <div class="item">
+        <img src="https://cdn-icons-png.flaticon.com/512/657/657882.png" alt="Premium Role">
+        <h2>Premium Role</h2>
+        <p>$3/month — Access exclusive VC channels</p>
+        <a class="buy-btn" href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WL69759605857328M76SHTY" target="_blank">Subscribe</a>
+      </div>
+      <div class="item">
+        <img src="https://cdn-icons-png.flaticon.com/512/3820/3820331.png" alt="XP Booster">
+        <h2>XP Booster</h2>
+        <p>$2 — Double XP for 7 days</p>
+        <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=XP Booster Payment&body=Your Discord tag here" target="_blank">Buy</a>
+      </div>
+      <div class="item">
+        <img src="https://cdn-icons-png.flaticon.com/512/3502/3502458.png" alt="Cool VC Badge">
+        <h2>Cool VC Badge</h2>
+        <p>$1 — Supporter flair on Discord</p>
+        <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=VC Badge Payment&body=Your Discord tag here" target="_blank">Buy</a>
+      </div>
     </div>
-    <div class="item">
-      <img src="https://cdn-icons-png.flaticon.com/512/3820/3820331.png" alt="XP Booster">
-      <h2>XP Booster</h2>
-      <p>$2 — Double XP for 7 days</p>
-      <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=XP Booster Payment&body=Your Discord tag here" target="_blank">Buy</a>
-    </div>
-    <div class="item">
-      <img src="https://cdn-icons-png.flaticon.com/512/3502/3502458.png" alt="Cool VC Badge">
-      <h2>Cool VC Badge</h2>
-      <p>$1 — Supporter flair on Discord</p>
-      <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=VC Badge Payment&body=Your Discord tag here" target="_blank">Buy</a>
-    </div>
+    <footer>
+      &copy; 2025 Harlequin's VC Shop • Powered by PayPal & Discord
+    </footer>
   </div>
-  <footer>
-    &copy; 2025 Harlequin's VC Shop. Designed with passion in the cosmos.
-  </footer>
 </body>
 </html>
