--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Orbitron', sans-serif;
-      background: url('/mnt/data/506b0246-6b15-46fe-9e45-509f1c249502.png') center center/cover no-repeat fixed;
+      background: url('/mnt/data/14dd7e7f-4f0b-4ade-9d9f-e89e3f3421e3.png') center center/cover repeat fixed;
       color: #fff;
       text-align: center;
     }
@@ -22,9 +22,10 @@
       padding: 20px;
     }
     header img {
-      max-height: 90px;
+      max-height: 120px;
       border-radius: 50%;
-      margin-bottom: 10px;
+      margin: 0 auto 10px;
+      display: block;
     }
     header h1 {
       margin: 0;
@@ -111,11 +112,11 @@
         <img src="https://cdn-icons-png.flaticon.com/512/3502/3502458.png" alt="Cool VC Badge">
         <h2>Cool VC Badge</h2>
         <p>$1 — Supporter flair on Discord</p>
-        <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=VC Badge Payment&body=Your Discord tag here" target="_blank">Buy</a>
+        <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=Cool VC Badge Payment&body=Your Discord tag here" target="_blank">Buy</a>
       </div>
     </div>
     <footer>
-      &copy; 2025 Harlequin's VC Shop • Powered by PayPal & Discord
+      © 2025 Harlequin's VC Shop. All rights reserved.
     </footer>
   </div>
 </body>
