--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Orbitron', sans-serif;
-      background: url('/mnt/data/14dd7e7f-4f0b-4ade-9d9f-e89e3f3421e3.png') center center/cover repeat fixed;
+      background: url('https://i.pinimg.com/originals/6e/11/ec/6e11ecff49113111028fba9ec39857c4.gif') center center/cover repeat fixed;
       color: #fff;
       text-align: center;
     }
