--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Orbitron', sans-serif;
-      background: url('https://i.pinimg.com/originals/6e/11/ec/6e11ecff49113111028fba9ec39857c4.gif') center center/cover repeat fixed;
+      background: url('/mnt/data/14dd7e7f-4f0b-4ade-9d9f-e89e3f3421e3.png') center center/cover no-repeat fixed;
       color: #fff;
       text-align: center;
     }
@@ -24,8 +24,10 @@
     header img {
       max-height: 120px;
       border-radius: 50%;
-      margin: 0 auto 10px;
+      margin-bottom: 10px;
       display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
     header h1 {
       margin: 0;
@@ -116,7 +118,7 @@
       </div>
     </div>
     <footer>
-      © 2025 Harlequin's VC Shop. All rights reserved.
+      &copy; 2025 Harlequin's VC Shop. All rights reserved.
     </footer>
   </div>
 </body>
