--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Harlequin's VC Shop</title>
+  <title>Perks Shop</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: 'Orbitron', sans-serif;
-      background: url('/mnt/data/14dd7e7f-4f0b-4ade-9d9f-e89e3f3421e3.png') center center/cover no-repeat fixed;
+      background: url('https://i.pinimg.com/originals/6e/11/ec/6e11ecff49113111028fba9ec39857c4.gif') center center/cover no-repeat fixed;
       color: #fff;
       text-align: center;
     }
@@ -94,7 +94,7 @@
 <body>
   <div class="overlay">
     <header>
-      <img src="/mnt/data/506b0246-6b15-46fe-9e45-509f1c249502.png" alt="Server Logo">
+      <img src="https://cdn.discordapp.com/attachments/855567929458556988/1361657882684424315/image_2025-04-15_042530282-removebg-preview.png?ex=67ff8e39&is=67fe3cb9&hm=e4ddfc0f5022570d235c355340f2793607143b9c2a10e02588f712fba712d786&">
       <h1>🌟 Harlequin's VC Shop 🌟</h1>
     </header>
     <div class="shop">
