--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     }
     header h1 {
       margin: 0;
-      color: #f1c40f;
+      color: #BC13FE;
       font-size: 2.5rem;
     }
     .shop {
@@ -60,14 +60,14 @@
     }
     .item h2 {
       margin: 10px 0;
-      color: #f1c40f;
+      color: #BC13FE;
     }
     .item p {
       font-size: 1.1rem;
       color: #ddd;
     }
     .buy-btn {
-      background: #f1c40f;
+      background: #BC13FE;
       color: #000;
       padding: 12px 25px;
       border: none;
@@ -95,7 +95,7 @@
   <div class="overlay">
     <header>
       <img src="https://cdn.discordapp.com/attachments/855567929458556988/1361657882684424315/image_2025-04-15_042530282-removebg-preview.png?ex=67ff8e39&is=67fe3cb9&hm=e4ddfc0f5022570d235c355340f2793607143b9c2a10e02588f712fba712d786&">
-      <h1>🌟 Harlequin's VC Shop 🌟</h1>
+      <h1>🌟 Perks Shop 🌟</h1>
     </header>
     <div class="shop">
       <div class="item">
