--- a/index.html
+++ b/index.html
@@ -6,17 +6,26 @@
   <title>Perks Shop</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
       font-family: 'Orbitron', sans-serif;
-      background: url('https://i.gifer.com/T7n.gif') center center/cover no-repeat fixed;
+      overflow-x: hidden;
+    }
+    body {
+      background: url('/mnt/data/14dd7e7f-4f0b-4ade-9d9f-e89e3f3421e3.png') center center/cover no-repeat fixed;
       color: #fff;
       text-align: center;
     }
-    .overlay {
+    section {
+      transition: background 1s ease-in-out;
+      padding: 40px 20px;
+    }
+    section:nth-of-type(odd) {
       background-color: rgba(0, 0, 0, 0.8);
-      min-height: 100vh;
-      padding-bottom: 40px;
+    }
+    section:nth-of-type(even) {
+      background-color: rgba(20, 20, 40, 0.8);
     }
     header {
       padding: 20px;
@@ -31,13 +40,17 @@
     }
     header h1 {
       margin: 0;
-      color: #BC13FE;
+      color: #f1c40f;
       font-size: 2.5rem;
+    }
+    h2.section-title {
+      font-size: 2rem;
+      margin-bottom: 30px;
+      color: #f1c40f;
     }
     .shop {
       max-width: 1000px;
-      margin: 40px auto;
-      padding: 20px;
+      margin: 0 auto;
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
@@ -58,16 +71,16 @@
       border-radius: 10px;
       margin-bottom: 15px;
     }
-    .item h2 {
+    .item h3 {
       margin: 10px 0;
-      color: #BC13FE;
+      color: #f1c40f;
     }
     .item p {
       font-size: 1.1rem;
       color: #ddd;
     }
     .buy-btn {
-      background: #BC13FE;
+      background: #f1c40f;
       color: #000;
       padding: 12px 25px;
       border: none;
@@ -92,34 +105,55 @@
   </style>
 </head>
 <body>
-  <div class="overlay">
-    <header>
-      <img src="https://cdn.discordapp.com/attachments/855567929458556988/1361657882684424315/image_2025-04-15_042530282-removebg-preview.png?ex=67ff8e39&is=67fe3cb9&hm=e4ddfc0f5022570d235c355340f2793607143b9c2a10e02588f712fba712d786&">
-      <h1>🌟 Perks Shop 🌟</h1>
-    </header>
+  <header>
+    <img src="/mnt/data/506b0246-6b15-46fe-9e45-509f1c249502.png" alt="Server Logo">
+    <h1>🌌 Perks Shop 🌌</h1>
+  </header>
+
+  <section>
+    <h2 class="section-title">Power Perks</h2>
     <div class="shop">
       <div class="item">
-        <img src="https://cdn-icons-png.flaticon.com/512/657/657882.png" alt="Premium Role">
-        <h2>Premium Role</h2>
-        <p>$3/month — Access exclusive VC channels</p>
-        <a class="buy-btn" href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WL69759605857328M76SHTY" target="_blank">Subscribe</a>
+        <h3>VC Mod</h3>
+        <p>$15/month</p>
+        <a class="buy-btn" href="#">Buy</a>
       </div>
       <div class="item">
-        <img src="https://cdn-icons-png.flaticon.com/512/3820/3820331.png" alt="XP Booster">
-        <h2>XP Booster</h2>
-        <p>$2 — Double XP for 7 days</p>
-        <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=XP Booster Payment&body=Your Discord tag here" target="_blank">Buy</a>
+        <h3>Mod</h3>
+        <p>$30/month</p>
+        <a class="buy-btn" href="#">Buy</a>
       </div>
       <div class="item">
-        <img src="https://cdn-icons-png.flaticon.com/512/3502/3502458.png" alt="Cool VC Badge">
-        <h2>Cool VC Badge</h2>
-        <p>$1 — Supporter flair on Discord</p>
-        <a class="buy-btn" href="mailto:sam-harlequin2@hotmail.com?subject=Cool VC Badge Payment&body=Your Discord tag here" target="_blank">Buy</a>
+        <h3>Senior Mod</h3>
+        <p>$60/month</p>
+        <a class="buy-btn" href="#">Buy</a>
+      </div>
+      <div class="item">
+        <h3>Co-Owner</h3>
+        <p>$960/month</p>
+        <a class="buy-btn" href="#">Buy</a>
       </div>
     </div>
-    <footer>
-      &copy; 2025 Harlequin's VC Shop. All rights reserved.
-    </footer>
-  </div>
+  </section>
+
+  <section>
+    <h2 class="section-title">Ability Perks</h2>
+    <div class="shop">
+      <div class="item">
+        <h3>Image Perms</h3>
+        <p>$3/month</p>
+        <a class="buy-btn" href="#">Buy</a>
+      </div>
+      <div class="item">
+        <h3>Custom Role</h3>
+        <p>$3/month</p>
+        <a class="buy-btn" href="#">Buy</a>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    &copy; 2025 Harlequin's Perks Shop. All rights reserved.
+  </footer>
 </body>
 </html>
