--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       overflow-x: hidden;
     }
     body {
-      background: url('/mnt/data/14dd7e7f-4f0b-4ade-9d9f-e89e3f3421e3.png') center center/cover no-repeat fixed;
+      background: url('https://cdn.pixabay.com/animation/2023/06/06/06/51/06-51-32-766_512.gif') center center/cover no-repeat fixed;
       color: #fff;
       text-align: center;
     }
@@ -106,7 +106,7 @@
 </head>
 <body>
   <header>
-    <img src="/mnt/data/506b0246-6b15-46fe-9e45-509f1c249502.png" alt="Server Logo">
+    <img src="https://cdn.discordapp.com/attachments/855567929458556988/1361657882684424315/image_2025-04-15_042530282-removebg-preview.png?ex=67ff8e39&is=67fe3cb9&hm=e4ddfc0f5022570d235c355340f2793607143b9c2a10e02588f712fba712d786&">
     <h1>🌌 Perks Shop 🌌</h1>
   </header>
 
