--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
       overflow-x: hidden;
     }
     body {
-      background: url('https://cdn.pixabay.com/animation/2023/06/06/06/51/06-51-32-766_512.gif') center center/cover no-repeat fixed;
+      background: url('https://i.pinimg.com/originals/46/5a/3d/465a3d0703fdd4c804f0dba25f7f5e19.gif') center center/cover no-repeat fixed;
       color: #fff;
       text-align: center;
+      scroll-behavior: smooth;
     }
     section {
-      transition: background 1s ease-in-out;
+      transition: background 1s ease-in-out, color 1s ease-in-out;
       padding: 40px 20px;
     }
     section:nth-of-type(odd) {
-      background-color: rgba(0, 0, 0, 0.8);
+      background-color: rgba(0, 0, 20, 0.8);
     }
     section:nth-of-type(even) {
-      background-color: rgba(20, 20, 40, 0.8);
+      background-color: rgba(10, 10, 30, 0.8);
     }
     header {
       padding: 20px;
@@ -42,11 +43,13 @@
       margin: 0;
       color: #f1c40f;
       font-size: 2.5rem;
+      text-shadow: 0 0 10px #fff;
     }
     h2.section-title {
       font-size: 2rem;
       margin-bottom: 30px;
       color: #f1c40f;
+      text-shadow: 0 0 8px #fff;
     }
     .shop {
       max-width: 1000px;
@@ -57,31 +60,33 @@
       justify-content: center;
     }
     .item {
-      background: rgba(46, 46, 62, 0.8);
+      background: rgba(30, 30, 60, 0.9);
+      border: 1px solid #8a2be2;
       border-radius: 10px;
       padding: 30px;
       width: 300px;
-      box-shadow: 0 4px 15px #00000066;
+      box-shadow: 0 4px 25px #8a2be2aa;
       display: flex;
       flex-direction: column;
       align-items: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-    .item img {
-      max-width: 100px;
-      border-radius: 10px;
-      margin-bottom: 15px;
+    .item:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 8px 30px #8a2be2ee;
     }
     .item h3 {
       margin: 10px 0;
-      color: #f1c40f;
+      color: #b19cd9;
+      font-size: 1.5rem;
     }
     .item p {
       font-size: 1.1rem;
-      color: #ddd;
+      color: #e0e0ff;
     }
     .buy-btn {
-      background: #f1c40f;
-      color: #000;
+      background: linear-gradient(45deg, #8a2be2, #4b0082);
+      color: #fff;
       padding: 12px 25px;
       border: none;
       border-radius: 8px;
@@ -91,6 +96,12 @@
       text-decoration: none;
       display: inline-block;
       margin-top: 15px;
+      box-shadow: 0 4px 15px #00000066;
+      transition: background 0.3s ease, transform 0.3s ease;
+    }
+    .buy-btn:hover {
+      background: linear-gradient(45deg, #4b0082, #8a2be2);
+      transform: scale(1.05);
     }
     footer {
       padding: 20px;
@@ -153,7 +164,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Harlequin's Perks Shop. All rights reserved.
+    © 2025 Harlequin's Perks Shop. All rights reserved.
   </footer>
 </body>
 </html>
