--- a/index.html
+++ b/index.html
@@ -13,21 +13,15 @@
       overflow-x: hidden;
     }
     body {
-      background: url('https://starwalk.space/gallery/images/what-is-space/1920x1080.jpg') center center/cover no-repeat fixed;
+      background: url('https://cdn.discordapp.com/attachments/855567929458556988/1361868008884146358/IMG_7349.jpg?ex=680051eb&is=67ff006b&hm=2b313240b9c9b9563eca84387e3a7d118df0c0e37a842d4dfe8eb96c60696916&') center center/cover no-repeat fixed;
       color: #fff;
       text-align: center;
       scroll-behavior: smooth;
-      transition: background-color 1s ease-in-out;
     }
     section {
+      transition: background 1s ease-in-out, color 1s ease-in-out;
       padding: 40px 20px;
-      transition: background-color 1s ease-in-out;
-    }
-    section.power-perks {
-      background-color: rgba(0, 0, 20, 0.8);
-    }
-    section.ability-perks {
-      background-color: rgba(10, 10, 30, 0.8);
+      background-color: rgba(10, 10, 30, 0.8); /* same background color for both */
     }
     header {
       padding: 20px;
@@ -104,6 +98,13 @@
       background: linear-gradient(45deg, #4b0082, #8a2be2);
       transform: scale(1.05);
     }
+    .buy-btn.gold {
+      background: linear-gradient(45deg, #ffd700, #ffa500);
+      color: #000;
+    }
+    .buy-btn.gold:hover {
+      background: linear-gradient(45deg, #ffa500, #ffd700);
+    }
     footer {
       padding: 20px;
       color: #aaa;
@@ -118,72 +119,54 @@
 </head>
 <body>
   <header>
-    <img src="https://cdn.discordapp.com/attachments/855567929458556988/1361657882684424315/image_2025-04-15_042530282-removebg-preview.png?ex=67ff8e39&is=67fe3cb9&hm=e4ddfc0f5022570d235c355340f2793607143b9c2a10e02588f712fba712d786&">
+    <img src="https://cdn.discordapp.com/attachments/855567929458556988/1361657882684424315/image_2025-04-15_042530282-removebg-preview.png?ex=680036f9&is=67fee579&hm=0dc232252cbf8299cd59f4633e08ab10c1aa2101a1f5b77d28a2e497a930d55e&">
     <h1>🌌 Perks Shop 🌌</h1>
   </header>
 
-  <section class="power-perks">
+  <section>
     <h2 class="section-title">Power Perks</h2>
     <div class="shop">
       <div class="item">
         <h3>VC Mod</h3>
         <p>$15/month</p>
-        <a class="buy-btn" href="#">Buy</a>
+        <a href="#" class="buy-btn gold">Buy</a>
       </div>
       <div class="item">
         <h3>Mod</h3>
         <p>$30/month</p>
-        <a class="buy-btn" href="#">Buy</a>
+        <a href="#" class="buy-btn gold">Buy</a>
       </div>
       <div class="item">
         <h3>Senior Mod</h3>
         <p>$60/month</p>
-        <a class="buy-btn" href="#">Buy</a>
+        <a href="#" class="buy-btn gold">Buy</a>
       </div>
       <div class="item">
         <h3>Co-Owner</h3>
         <p>$960/month</p>
-        <a class="buy-btn" href="#">Buy</a>
+        <a href="#" class="buy-btn gold">Buy</a>
       </div>
     </div>
   </section>
 
-  <section class="ability-perks">
+  <section>
     <h2 class="section-title">Ability Perks</h2>
     <div class="shop">
       <div class="item">
         <h3>Image Perms</h3>
         <p>$3/month</p>
-        <a class="buy-btn" href="#">Buy</a>
+        <a href="#" class="buy-btn">Buy</a>
       </div>
       <div class="item">
         <h3>Custom Role</h3>
         <p>$3/month</p>
-        <a class="buy-btn" href="#">Buy</a>
+        <a href="#" class="buy-btn">Buy</a>
       </div>
     </div>
   </section>
 
   <footer>
-    &copy; 2025 Harlequin VC Shop. All rights reserved.
+    &copy; 2025 Harlequin Perks Shop. All rights reserved.
   </footer>
-
-  <script>
-    const body = document.body;
-    window.addEventListener('scroll', () => {
-      const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
-      const powerPerks = document.querySelector('.power-perks');
-      const abilityPerks = document.querySelector('.ability-perks');
-
-      const powerTop = powerPerks.offsetTop;
-      const abilityTop = abilityPerks.offsetTop;
-
-      if (scrollTop >= abilityTop - 100) {
-        body.style.backgroundColor = 'rgba(10, 10, 30, 0.9)';
-      } else {
-        body.style.backgroundColor = 'rgba(0, 0, 20, 0.9)';
-      }
-    });
-  </script>
 </body>
 </html>
