--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       overflow-x: hidden;
     }
     body {
-      background: url('https://cdn.discordapp.com/attachments/855567929458556988/1361868008884146358/IMG_7349.jpg?ex=680051eb&is=67ff006b&hm=2b313240b9c9b9563eca84387e3a7d118df0c0e37a842d4dfe8eb96c60696916&') center center/cover no-repeat fixed;
+      background: url('https://media.istockphoto.com/id/1371512625/vector/metal-textures-set-shiny-multicolored-lustrous-brushed-metallic-backgrounds.jpg?s=612x612&w=0&k=20&c=RTCD8X6CGf6MwdbTbu3yvOqlzPlW_-Ept_SuvcPrEFE=') center center/cover no-repeat fixed;
       color: #fff;
       text-align: center;
       scroll-behavior: smooth;
