--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       overflow-x: hidden;
     }
     body {
-      background: url('https://media.istockphoto.com/id/1371512625/vector/metal-textures-set-shiny-multicolored-lustrous-brushed-metallic-backgrounds.jpg?s=612x612&w=0&k=20&c=RTCD8X6CGf6MwdbTbu3yvOqlzPlW_-Ept_SuvcPrEFE=') center center/cover no-repeat fixed;
+      background: url('https://png.pngtree.com/thumb_back/fh260/background/20231030/pngtree-luminous-horizontal-texture-a-pink-and-purple-metal-background-image_13754380.png') center center/cover no-repeat fixed;
       color: #fff;
       text-align: center;
       scroll-behavior: smooth;
