--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       overflow-x: hidden;
     }
     body {
-      background: url('https://png.pngtree.com/thumb_back/fh260/background/20231030/pngtree-luminous-horizontal-texture-a-pink-and-purple-metal-background-image_13754380.png') center center/cover no-repeat fixed;
+      background: url('https://cdn.discordapp.com/attachments/855567929458556988/1361975356227190885/860DDB67-380F-4038-9EDB-7CCBD28B1A12.png?ex=6800b5e5&is=67ff6465&hm=9bc681f4ed48845aa98651a1ef0e94a32ad6f94a9607fd0e55cf3cb55e982cfc&') center center/cover no-repeat fixed;
       color: #fff;
       text-align: center;
       scroll-behavior: smooth;
